--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp01_1m]
-platform = espressif8266
-board = esp01_1m
+[env:solar_tracker]
+platform = atmelavr
+board = nanoatmega328
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
-	arduino-libraries/ArduinoMqttClient@^0.1.7
