Add serial sensor data communication

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
+	bblanchon/ArduinoJson@^6.21.2
+	bblanchon/StreamUtils@^1.7.3
