--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	arkhipenko/TaskScheduler@^3.7.0
 	bblanchon/ArduinoJson@^6.21.2
 	bblanchon/StreamUtils@^1.7.3
+	apechinsky/MemoryFree@^0.3.0
