Add windCheck task (using running average)

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.2
 	bblanchon/StreamUtils@^1.7.3
 	apechinsky/MemoryFree@^0.3.0
+	robtillaart/RunningAverage@^0.4.3
