--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	bblanchon/StreamUtils@^1.7.3
 	apechinsky/MemoryFree@^0.3.0
 	robtillaart/RunningAverage@^0.4.3
+	gavinlyonsrepo/TM1638plus@^2.0.0
