--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:solar_tracker]
 platform = atmelavr
-board = nanoatmega328
+board = megaatmega2560
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
