Read wind from MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,8 @@ lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
 	arkhipenko/TaskScheduler@^3.7.0
 	bblanchon/ArduinoJson@^6.21.2
-	bblanchon/StreamUtils@^1.7.3
 	apechinsky/MemoryFree@^0.3.0
 	robtillaart/RunningAverage@^0.4.3
 	gavinlyonsrepo/TM1638plus@^2.0.0
+	arduino-libraries/ArduinoMqttClient@^0.1.7
+	arduino-libraries/Ethernet@^2.0.2
