Replace ArduinoMqttClient.h with MQTT.h

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,5 @@ lib_deps =
 	apechinsky/MemoryFree@^0.3.0
 	robtillaart/RunningAverage@^0.4.3
 	gavinlyonsrepo/TM1638plus@^2.0.0
-	arduino-libraries/ArduinoMqttClient@^0.1.7
 	arduino-libraries/Ethernet@^2.0.2
+	256dpi/MQTT@^2.5.1
