Add support to send data over mqtt
Co-authored-by: Daniele Ceribelli <danieleceribelli@gmail.com>

--- a/src/Config.h.example
+++ b/src/Config.h.example
@@ -32,6 +32,8 @@
 #define WEST_SWITCH 6
 #define NORTH_LIMIT_SWITCH 5
 #define SOUTH_LIMIT_SWITCH 2
+#define EAST_LIMIT_SWITCH 28
+#define WEST_LIMIT_SWITCH 29
 
 #define TM_STROBE 8
 #define TM_CLOCK 9
@@ -48,6 +50,7 @@
 #define MQTT_USERNAME admin
 #define MQTT_PASSWORD password
 #define MQTT_TOPIC weather/wind-speed
+#define PUBLISH_MQTT_TOPIC "sensors/"
 #define MQTT_POLL_TIME 30 * TIME_SECOND
 #define WIND_MQTT_TIMEOUT 5 * TASK_MINUTE
 
@@ -73,6 +76,7 @@
 #define GO_HOME_MOVEMENT_TIME 30 * TASK_SECOND
 
 #define HOME_SLEEP_TIME 2 * TASK_HOUR
+#define WIND_SLEEP_TIME 30 * TASK_SECOND
 
 #define SENSOR_CHECK_INTERVAL 8 * TASK_SECOND
 #define COMMUNICATION_INTERVAL 10 * TASK_SECOND
